<resources>
    <string name="app_name">CattoCat</string>


    <!-- Shared Item -->

    <!-- Main Activity - Bottom Nav-->
    <string name="btm_nav_home">홈</string>
    <string name="btm_nav_board">게시판</string>
    <string name="btm_nav_mycat">내 고양이</string>
    <string name="btm_nav_map">지도</string>
    <string name="btm_nav_setting">설정</string>


    <!-- Board Activity-->
    <string name="board_title">게시판</string>

    <!-- Post Activity-->
    <string name="post_title">게시판</string>

    <!-- Setting Activity -->
    <string name="setting_title">설정</string>
    <string name="setting_notice">공지사항</string>
    <string name="setting_qustion">문의하기</string>
    <string name="setting_popup">팝업 수신 설정</string>
    <string name="setting_useinfo">사용 안내</string>
    <string name="setting_user">회원 설정</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_resign">회원탈퇴</string>
    <string name="setting_info">cattocat version 1.1.0</string>


    <string name="setting_email_report">cattocat@gmail.com</string>


    <!-- Notice Activity -->
    <string name="notice_title">공지사항</string>

    <!-- MyCat Activity -->
    <string name="mycat_title">내 고양이</string>






    <!-- Naver Map -->
    <string name="naver_maps_client_id">hrli0edo76</string>
    <string name="naver_maps_client_secret">PCDNFB9jx5sHgVq15IFSAm7Hg03HnPldr8n4iqOJ</string>

    <!-- Naver Map -->
    <string name="naver_maps_message_error_default">다시 시도해주세요.</string>



</resources>